# telegram_bot_template

./: .env.example  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: run.yml
app/bot/: bot.py
app/bot/handlers/: commands.py  errors.py
app/bot/keyboards/: main.py
app/bot/logs/: logger.py
app/bot/middlewares/: i18n.py
app/bot/utils/: constants.py  functions.py  i18n.py
app/db/models/: user.py
config/: config.py  settings.toml
locales/en/LC_MESSAGES/: txt.ftl
locales/ru/LC_MESSAGES/: txt.ftl
tests/bot/handlers/: test_commands.py
