[project]
name = "telegram-bot-template"
version = "0.1.0"
description = "Template for creating aiogram telegram bots" 
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiogram-dialog>=2.3.1",
    "dynaconf>=3.2.10",
    "python-dotenv>=1.0.1", 
    "fluentogram>=1.1.10",
]
authors = [
    { name = "Kuznetsov Aleksandr", email = "ku.alex.bo@gmail.com" }
]

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = ">=0.13.1"
mypy = "*"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "migrations",
    "build",
    "dist",
]

ignore = ["E501"]
