[project]
name = "telegram-bot-template"
version = "0.1.0"
description = "Template for creating aiogram telegram bots" 
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "dynaconf>=3.2.10",
    "python-dotenv>=1.0.1",
    "fluentogram>=1.1.10",
    "aiohttp>=3.13.2",
]
authors = [
    { name = "Kuznetsov Aleksandr", email = "ku.alex.bo@gmail.com" }
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
  "migrations",
  ".venv",
  "__pycache__",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "B",  # bugbear
  "UP", # pyupgrade
  "Q",  # quote-style
]

ignore = ["E501"]

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "migrations",
    "build",
    "dist",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = true
explicit_package_bases = true
